--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
   ],
   "license": "Apache License, v2.0",
   "dependencies": {
-    "d3": "~3.3.13"
+    "d3": "~3.3.13",
+    "fastdom": "~0.8.5"
   },
   "ignore": [
     "**/.*",
@@ -42,6 +43,7 @@
     "d3": "~3.3.13"
   },
   "devDependencies": {
-    "d3": "~3.3.13"
+    "d3": "~3.3.13",
+    "fastdom": "~0.8.5"
   }
 }
