--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
-  "name": "nvd3",
-  "homepage": "http://www.nvd3.org",
+  "name": "nvd3-community",
+  "version": "1.7.0",
+  "homepage": "http://nvd3-community.github.io/nvd3/",
   "authors": [
     "Bob Monteverde",
     "Tyler Wolf",
@@ -21,7 +22,7 @@
   ],
   "license": "Apache License, v2.0",
   "dependencies": {
-    "d3": "^3.4.4"
+    "d3": "~3.3.13"
   },
   "ignore": [
     "**/.*",
@@ -36,5 +37,11 @@
     "*.xml",
     "*.json",
     "*.md"
-  ]
+  ],
+  "resolutions": {
+    "d3": "~3.3.13"
+  },
+  "devDependencies": {
+    "d3": "~3.3.13"
+  }
 }
